--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,22 +8,56 @@
     <link rel="stylesheet" href="style.css">
     <script src="library.js" defer></script>
 </head>
+
 <body>
+
+    <dialog class="bookPopup">
+
+        <form action="">
+
+            <p>Let's add a book!</p>
+
+            <p>
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" placeholder="Enter book title" required>
+            </p>
+
+            <p>
+                <label for="author">Author:</label>
+                <input type="text" name="author" id="author" placeholder="Enter author name" required>
+            </p>
+
+            <p>
+                <label for="pages">Pages:</label>
+                <input type="number" name="pages" id="pages" min="1" max="9999" step="25">
+            </p>
+
+            <p>
+                <label for="read">Have you read this book?</label>
+                <input type="checkbox" name="read" id="read" required>
+            </p>
+
+            <button id='cancel' autofocus>Cancel</button>
+            <button id="submit">Submit</button>
+
+        </form>
+
+    </dialog>
 
     <div class="wrapper">
 
+
         <div class="main">
             <div class="toolbar">
-                <h3>Bookshelf</h3>
-                <button>Add Book</button>
+                <h2>Bookshelf</h2>
+                <button class="addBook">Add Book</button>
             </div>
             <div class="shelf">
+
                 <div class="book">
-                    <ul>
-                        <li>Title: <span class="title">future title</span> </li>
-                        <li>Author: <span class="author">future author</span></li>
-                        <li>Page Count: <span class="pages">page count</span></li>
-                    </ul>
+                    <p class="title">future title</p>
+                    <p class="author">future author</p>
+                    <p class="pageCount">page count</p>
                 </div>
 
             </div>
@@ -34,6 +69,9 @@
 
 
     </div>
-    
+
+
 </body>
+
+
 </html>
