--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
         <form action="">
 
-            <p>Let's add a book!</p>
-
+            <p id="msg"><strong>Let's add a book!</strong></p>
+            
             <p>
-                <label for="title">Title</label>
-                <input type="text" name="title" id="title" placeholder="Enter book title" required>
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title" placeholder="Enter book title" required maxlength="30">
             </p>
 
             <p>
                 <label for="author">Author:</label>
-                <input type="text" name="author" id="author" placeholder="Enter author name" required>
+                <input type="text" name="author" id="author" placeholder="Enter author name" required maxlength="30">
             </p>
 
             <p>
                 <label for="pages">Pages:</label>
-                <input type="number" name="pages" id="pages" min="1" max="9999" step="25">
+                <input type="number" name="pages" id="pages" min="1" max="9999" required placeholder="874">
             </p>
 
             <p>
@@ -37,8 +37,10 @@
                 <input type="checkbox" name="read" id="read" required>
             </p>
 
-            <button id='cancel' autofocus>Cancel</button>
-            <button id="submit">Submit</button>
+            <div class="buttons">
+                <button id='cancel' autofocus>Cancel</button>
+                <button id="submit">Submit</button>
+            </div>
 
         </form>
 
