--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <form action="">
 
             <p id="msg"><strong>Let's add a book!</strong></p>
-            
+
             <p>
                 <label for="title">Title:</label>
-                <input type="text" name="title" id="title" placeholder="Enter book title" required maxlength="30">
+                <input type="text" name="title" id="title" placeholder="Enter book title" required maxlength="50">
             </p>
 
             <p>
                 <label for="author">Author:</label>
-                <input type="text" name="author" id="author" placeholder="Enter author name" required maxlength="30">
+                <input type="text" name="author" id="author" placeholder="Enter author name" required maxlength="50">
             </p>
 
             <p>
@@ -34,12 +34,12 @@
 
             <p>
                 <label for="read">Have you read this book?</label>
-                <input type="checkbox" name="read" id="read" required>
+                <input type="checkbox" name="read" id="read" value="yes">
             </p>
 
             <div class="buttons">
                 <button id='cancel' autofocus>Cancel</button>
-                <button id="submit">Submit</button>
+                <button id="submit" type="submit">Submit</button>
             </div>
 
         </form>
