Add new book to shelf functionality complete

--- a/index.html
+++ b/index.html
@@ -54,13 +54,9 @@
                 <h2>Bookshelf</h2>
                 <button class="addBook">Add Book</button>
             </div>
-            <div class="shelf">
+            <div class="shelf" id="bookshelf">
 
-                <div class="book">
-                    <p class="title">future title</p>
-                    <p class="author">future author</p>
-                    <p class="pageCount">page count</p>
-                </div>
+
 
             </div>
         </div>
