Update grid layout to be more responive, update book dimensions to fit per row on mobile

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="main">
             <div class="toolbar">
-                <h2>Your Super Rad Bookshelf</h2>
+                <h2>Your Bookshelf</h2>
                 <button class="addBook">Add Book</button>
             </div>
             <div class="shelf" id="bookshelf">
