--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,9 @@
     <div class="wrapper">
       <div class="main">
         <div class="toolbar">
+          <div class="drop">
+            <img src="../resources/menu-icon.png" alt="Drop down menu icon" />
+          </div>
           <h2>Your Bookshelf</h2>
           <button class="addBook">Add Book</button>
         </div>
