Add reusable dropdown menu module

--- a/src/index.html
+++ b/src/index.html
@@ -63,8 +63,20 @@
     <div class="wrapper">
       <div class="main">
         <div class="toolbar">
-          <div class="drop">
-            <img src="../resources/menu-icon.png" alt="Drop down menu icon" />
+          <div id="drop-icon">
+            <img
+              src="../resources/menu-icon.png"
+              alt="Drop down menu icon"
+              width="35"
+              height="auto"
+            />
+            <div class="drop-menu">
+              <ul class="menu-opts">
+                <li id="home">Home</li>
+                <li id="shelf">Bookshelf</li>
+                <li id="about">About</li>
+              </ul>
+            </div>
           </div>
           <h2>Your Bookshelf</h2>
           <button class="addBook">Add Book</button>
