--- a/src/index.html
+++ b/src/index.html
@@ -3,86 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Local Library | Bookshelf</title>
+    <title>Local Library | Home</title>
   </head>
 
   <body>
-    <dialog class="bookPopup">
-      <form action="">
-        <p id="msg"><strong>Let's add a book!</strong></p>
-
-        <p>
-          <label for="title">Title:</label>
-          <input
-            type="text"
-            name="title"
-            id="title"
-            placeholder="Enter book title"
-            required
-            maxlength="50"
+    <header>
+      <div class="toolbar">
+        <div id="drop-icon">
+          <img
+            src="../resources/menu-icon.png"
+            alt="Drop down menu icon"
+            width="35"
+            height="auto"
           />
-        </p>
-
-        <p>
-          <label for="author">Author:</label>
-          <input
-            type="text"
-            name="author"
-            id="author"
-            placeholder="Enter author name"
-            required
-            maxlength="50"
-          />
-        </p>
-
-        <p>
-          <label for="pages">Pages:</label>
-          <input
-            type="number"
-            name="pages"
-            id="pages"
-            min="1"
-            max="9999"
-            required
-            placeholder="874"
-          />
-        </p>
-
-        <p>
-          <label for="read">Have you read this book?</label>
-          <input type="checkbox" name="read" id="read" value="yes" />
-        </p>
-
-        <div class="buttons">
-          <button id="cancel" autofocus>Cancel</button>
-          <button id="submit" type="submit">Submit</button>
-        </div>
-      </form>
-    </dialog>
-
-    <div class="wrapper">
-      <div class="main">
-        <div class="toolbar">
-          <div id="drop-icon">
-            <img
-              src="../resources/menu-icon.png"
-              alt="Drop down menu icon"
-              width="35"
-              height="auto"
-            />
-            <div class="drop-menu">
-              <ul class="menu-opts">
-                <li id="home">Home</li>
-                <li id="shelf">Bookshelf</li>
-                <li id="about">About</li>
-              </ul>
-            </div>
+          <div class="drop-menu">
+            <ul class="menu-opts">
+              <li id="home">Home</li>
+              <li id="shelf">Bookshelf</li>
+              <li id="about">About</li>
+            </ul>
           </div>
-          <h2>Your Bookshelf</h2>
-          <button class="addBook">Add Book</button>
         </div>
-        <div class="shelf" id="bookshelf"></div>
+        <h2>Local Library</h2>
       </div>
-    </div>
+    </header>
   </body>
 </html>
