--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,39 @@
       </div>
     </header>
 
-    <main>main body content</main>
+    <main>
+      <div class="frame">
+        <div class="reel">
+          <img
+            src="../resources/IMG_5446.jpg"
+            alt="Girl paddle boarding in front of a waterfall."
+            id="waterfall"
+            width="auto"
+            height="500"
+          />
+          <img
+            src="../resources/IMG_5468.jpg"
+            alt="Yellow marigolds and white Egyptian starflower blooming"
+            id="marigolds"
+            width="auto"
+            height="500"
+          />
+          <img
+            src="../resources/IMG_5470.jpg"
+            alt="White veronica blooming"
+            id="veronica"
+            width="auto"
+            height="500"
+          />
+          <img
+            src="../resources/IMG_5471.jpg"
+            alt="Orange lilies and lavender"
+            id="lilies"
+            width="auto"
+            height="500"
+          />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
