Continue messing with frame and reel settings

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           />
           <img
             src="../resources/IMG_5471.jpg"
-            alt="Orange lilies and lavender"
+            alt="Orange lilies and lavender blooming"
             id="lilies"
             width="auto"
             height="500"
