Refactor img tools, clean up css

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,10 @@
             height="500"
           />
         </div>
+        <div class="imgButtons">
+          <button id="prev-btn">Previous</button>
+          <button id="next">Next</button>
+        </div>
       </div>
     </main>
   </body>
