Add reel module, update webpack config to load imgs properly

--- a/src/index.html
+++ b/src/index.html
@@ -32,28 +32,28 @@
       <div class="frame">
         <div class="reel">
           <img
-            src="../resources/IMG_5446.jpg"
+            src="../resources/img1.jpg"
             alt="Girl paddle boarding in front of a waterfall."
             id="waterfall"
             width="auto"
             height="500"
           />
           <img
-            src="../resources/IMG_5468.jpg"
+            src="../resources/img2.jpg"
             alt="Yellow marigolds and white Egyptian starflower blooming"
             id="marigolds"
             width="auto"
             height="500"
           />
           <img
-            src="../resources/IMG_5470.jpg"
+            src="../resources/img3.jpg"
             alt="White veronica blooming"
             id="veronica"
             width="auto"
             height="500"
           />
           <img
-            src="../resources/IMG_5471.jpg"
+            src="../resources/img4.jpg"
             alt="Orange lilies and lavender blooming"
             id="lilies"
             width="auto"
@@ -62,7 +62,7 @@
         </div>
         <div class="imgButtons">
           <button id="prev-btn">Previous</button>
-          <button id="next">Next</button>
+          <button id="next-btn">Next</button>
         </div>
       </div>
     </main>
