Add text to home page, remove test books

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,13 @@
     </header>
 
     <main>
+      <div class="activities">
+        <h1>Recent Activities</h1>
+        <p>
+          Nothing complements a good book better than the fresh smell of flowers
+          or relaxing near a waterfall!
+        </p>
+      </div>
       <div class="frame">
         <div class="reel">
           <img
