Add timer to auto scroll the carousel

--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,9 @@
             height="500"
           />
         </div>
-        <div class="imgButtons">
+        <div class="navigation">
           <button id="prev-btn">Previous</button>
+          <div class="circles"></div>
           <button id="next-btn">Next</button>
         </div>
       </div>
