Add login page and associated drop down option

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
               <li id="home">Home</li>
               <li id="shelf">Bookshelf</li>
               <li id="about">About</li>
+              <li id="signIn">Sign In</li>
             </ul>
           </div>
         </div>
