--- a/src/library.html
+++ b/src/library.html
@@ -75,6 +75,7 @@
                 <li id="home">Home</li>
                 <li id="shelf">Bookshelf</li>
                 <li id="about">About</li>
+                <li id="signIn">Sign In</li>
               </ul>
             </div>
           </div>
